<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/wizard_main_margin">

        <ImageView
            android:id="@+id/v3"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/wizard_two_three" />

        <ImageView
            android:id="@+id/v1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wizard_two_one" />

        <ImageView
            android:id="@+id/v2"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/wizard_two_two" />
    </FrameLayout>

    <com.barantech.sayaword.widget.CustomTextView
        android:id="@+id/tv1"
        style="@style/wizardTextHeadline"
        android:text="@string/wizard_two_one" />

    <com.barantech.sayaword.widget.CustomTextView
        android:id="@+id/tv2"
        style="@style/wizardTextNormal"
        android:text="@string/wizard_two_two" />

    <com.barantech.sayaword.widget.CustomTextView
        android:id="@+id/tv3"
        style="@style/wizardTextNormal"
        android:text="@string/wizard_two_three" />
</LinearLayout>